<?xml version="1.0" encoding="utf-8"?>
<resources>
	<!-- Main -->
		
	<string name="app_name">BuddyDroid</string>
	<string name="statusHint">Enter status update here…</string>
	<string name="submit">Submit</string>
	<string name="stream">Stream</string>
	<string name="refresh">Refresh</string>
	<string name="status">Status</string>
	<string name="comments">Comments</string>

	<string name="filter_by">Filter by:</string>
	<string name="visit_site">Visit Site</string>
	<string name="filter_prompt">Choose a filter</string>
	<string name="zero">0</string>
	<string name="notify_prompt">Notifications</string>
				
	<!-- Login -->
	
	<string name="login">Login</string>
	<string name="register">Register</string>
	<string name="website">Website</string>
	<string name="username">Username</string>
	<string name="password">Password</string>
	<string name="login_instructions">Enter a website address to log into or register for. The website must be running Buddypress and have the xml-rpc receiver plugin installed.</string>
	<string name="website_hint">www.yoursite.com</string>
	<string name="missing_value">Please fill all fields</string>
	<string name="missing_website">Please enter a valid website</string>
	
	<!-- Filters -->
	
	<string name="activity">Activity</string>
	<string name="friends">Friends</string>
	<string name="groups">Groups</string>
	<string name="messages">Messages</string>
			
	<!-- Context Menu -->

	<string name="post_options">Post Options</string>
	<string name="view">View</string>
	<string name="comment">Comment</string>
	<string name="share_link">Share Link</string>
	<string name="share_text">Share Text</string>
	<string name="share_via">Share Via…</string>
	<string name="delete">Delete</string>
	<string name="really_delete_post">Really delete post?</string>
	<string name="really_delete_message">Really delete message thread?</string>
	<string name="really_delete_group">Really delete group?</string>
		
	<string name="comment_options">Comment Options</string>

	<string name="message_options">Message Options</string>
	<string name="reply">Reply</string>
	<string name="send">Send</string>
	<string name="mark_read">Mark Read</string>
	<string name="mark_unread">Mark Unread</string>

	<string name="friend_options">Friend Options</string>  
	<string name="friend_request_options">Friend Request Options</string>  
		
	<string name="group_options">Group Options</string>  
    <string name="join">Join</string>  
    <string name="leave">Leave</string>  
	
    <!-- Friends -->

    <string name="active_x">active %1$s</string>  
    <string name="accept">Accept</string>  
    					
	<!-- Groups -->
	
    <string name="x_members">%1$s Members</string>  
    <string name="one_member">1 Member</string>  
    <string name="new_group">Create Group</string>  
    <string name="create">Create</string>  
    <string name="post_group">Post to Group</string>  
    <string name="name_hint">Group Name…</string>  
    <string name="desc_hint">Description…</string>  
    	
	<!-- Notification -->
	
    <string name="notification_title">%1$d Buddypress Notifications</string>  
    <string name="notification_title_1">1 Buddypress Notification</string>  
    <string name="notification_text">Buddypress Notifications</string>  
        						
    <!-- Preferences -->
    
	<string name="preferences">Preferences</string>
    
	<string name="helpPref">Help</string>


	<string name="streamPref">Stream Preferences</string>
	<string name="streamMax">Max # of Stream Items</string>
	<string name="contentMax">Max Content Length</string>
	<string name="contentMaxDesc">leave blank for unlimited</string>
	<string name="relativeDate">Use Relative Date</string>
	<string name="relativeDateDesc">e.g. "two minutes ago"</string>

					
	<string name="advPref">Advanced Preferences</string>
	<string name="intervalSync">Sync Notifications</string>
	<string name="intervalSyncDesc">check for notifications periodically (starts on boot)</string>
	<string name="syncInterval">Sync Interval (minutes)</string>
	<string name="autoUpdate">Auto Update</string>
	<string name="autoUpdateDesc">Update stream on startup</string>
		
	<!-- User -->
	
	<string name="sprofile">%1$s\'s Profile</string>  
	<string name="befriend">Befriend</string>  
	<string name="unfriend">Unfriend</string>  
	<string name="friending">Friending</string>  
	<string name="message">Message</string>  
	<string name="close">Close</string>  
	<string name="really_delete_user">Really delete user account?</string>
	
	<!-- Message -->
	<string name="send_message">Send Message</string>  
	<string name="recipients_hint">Recipients (comma-separated)…</string>  
	<string name="subject_hint">Subject…</string>  
	<string name="message_hint">Message…</string>  
					
	<!-- Help -->
		
	<string name="help">Help</string>
	<string name="help_text">
	    <![CDATA[
	    <body  style="text-align:justify">
			<p>This is a simple Buddypress client. If configured properly, it will allow you to post status updates to your Buddypress install.  It also has a simple RSS reader for your sitewide activity feed where you can comment on, share and delete feed items.
			<p>Step 1: (Webmaster) Install the BuddyPress XML-RPC receiver plugin for Wordpress at <a href="http://wordpress.org/extend/plugins/buddypress-xml-rpc-receiver/">http://wordpress.org/extend/plugins/buddypress-xml-rpc-receiver/</a>
			<p>Step 2: (Webmaster) Activate and configure above plugin via wp-admin under Settings->BuddyPress XML-RPC
			<p>Step 3: (App user) From the main screen menu, click "Login" and enter your website (root path, e.g. <a href="http://www.site.com/">http://www.site.com/</a>), username, and password and click "Login".  You can also register a new user by entering the website and clicking "Register", which will take you to the site\'s registration screen.
			<p>Once you have completed these steps correctly, you should be able to interact with your BuddyPress activity stream via the app.
		</body>
		]]>
	</string>
	<!-- Toasts -->
	
	<string name="posted">Update posted</string>
	<string name="updated">Stream updated</string>
	<string name="got_messages">Retrieved %d messages</string>
	<string name="post_deleted">Post deleted</string>
	<string name="user_deleted">User deleted</string>
	<string name="commented">Comment posted</string>
	<string name="error">Something went wrong; please check your setup and the system log</string>
	<string name="registered">Service registered.  Visit the user\'s settings page to accept the service.</string>
	<string name="sent">Message Sent</string>  
	<string name="notifications">Retrieved %s notifications</string>
				
	<!-- Ongoing -->
	
	<string name="connecting">Connecting…</string>
	<string name="updating">Updating Stream…</string>
	<string name="posting">Posting Update…</string>
	<string name="commenting">Posting Comment…</string>
	<string name="registering">Registering Service…</string>
	<string name="deleting">Deleting Entry…</string>

	<!-- Errors -->				
	
	<string name="checkSetupInternet">No internet connection.</string>
	<string name="error_upload">Sorry, an error occurred while uploading the %s. Please try again later.</string>
	<string name="noWebsite">Please specify a website in preferences.</string>
	<string name="websiteSyntaxError">Invalid website URL</string>
	<string name="connectionRejected">Connection rejected - check username</string>
	
	<!-- Misc -->	

	<string name="avatar">Avatar</string>
	
	<!-- Filters -->
	
	<string name="sitewide">Sitewide</string>
	<string name="activity_update">Activity Updates</string>
	<string name="favorites">Favorites</string>
	<string name="new_member">New Members</string>
	<string name="just_me">Just Me</string>
	<string name="mentions">Mentions</string>
	<string name="groups">Groups</string>
	<string name="my_groups">My Groups</string>
	<string name="new_group">New Group</string>
	<string name="friends">Friends</string>
	<string name="friend_requests">Friend Requests</string>
	<string name="inbox">Inbox</string>
	<string name="sentbox">Sentbox</string>
	<string name="compose">Compose</string>
	
</resources>