<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/filters"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:orientation="vertical"
	>
	<LinearLayout
	    android:id="@+id/activity" 
		android:layout_width="match_parent"
		android:layout_height="wrap_content" 
		android:orientation="vertical"
		android:padding="10dp"
		android:visibility="gone"
		>	    
		<TextView 
		    android:id="@+id/activity_text" 
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:textStyle="bold"
			android:text="@string/activity"
			/>
		<ListView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
		    android:id="@+id/activity_list" 
			android:visibility="gone"
			/>
	</LinearLayout>
	<LinearLayout
	    android:id="@+id/friends" 
		android:layout_width="match_parent"
		android:layout_height="wrap_content" 
		android:orientation="vertical" 
		android:padding="10dp"
		android:visibility="gone"
		>	    
		<TextView 
		    android:id="@+id/friends_text" 
			android:layout_width="match_parent"
			android:layout_height="wrap_content" 
			android:textStyle="bold"
			android:text="@string/friends"
			/>
		<ListView
			android:layout_width="match_parent"
			android:layout_height="match_parent"
		    android:id="@+id/friends_list" 
			android:visibility="gone"
			/>
	</LinearLayout>
	<LinearLayout
	    android:id="@+id/groups" 
		android:layout_width="match_parent"
		android:layout_height="wrap_content" 
		android:orientation="vertical" 
		android:padding="10dp"
		android:visibility="gone"
		>	    
		<TextView 
		    android:id="@+id/groups_text" 
			android:layout_width="match_parent"
			android:layout_height="wrap_content" 
			android:textStyle="bold"
			android:text="@string/groups"
			/>
		<ListView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
		    android:id="@+id/groups_list" 
			android:visibility="gone"
			/>
	</LinearLayout>
	<LinearLayout
	    android:id="@+id/messages" 
		android:layout_width="match_parent"
		android:layout_height="wrap_content" 
		android:orientation="vertical" 
		android:padding="10dp"
		android:visibility="gone"
		>	    
		<TextView 
		    android:id="@+id/messages_text" 
			android:layout_width="match_parent"
			android:layout_height="wrap_content" 
			android:textStyle="bold"
			android:text="@string/messages"
			/>
		<ListView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
		    android:id="@+id/messages_list" 
			android:visibility="gone"
			/>
	</LinearLayout>
</LinearLayout>
